# pfc-reservations

./: .env.default  .gitignore  Cargo.toml  LICENSE  README.md  reservation_start.sh  start_db_nft.sh
examples/: check_free.rs  check_in_process.rs  gen_new.rs  gen_reservation.rs
js/: nft.ts
migrations/2021-10-17-initial/: down.sql  up.sql
src/: auth.rs  catchers.rs  db.rs  handlers.rs  main.rs  models.rs  requests.rs
src/handlers/: mint.rs  nft.rs  reservation.rs
