[package]
name = "pfc-reservation"
version = "0.1.1"
edition = "2018"
authors = ["PFC-Validator <pfc-validator@protonmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = { version = "0.5.0-rc.1", features = ["json", 'uuid'] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["postgres_pool"] }
rocket_sync_db_pools_codegen = "0.1.0-rc.1"

serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.68"
dotenv = "0.15.0"
env_logger = "0.8.3"
log = "0.4"
anyhow = "1.0.44"
thiserror = "1.0.30"
uuid = { version = "0.8.2", features = ["serde"] }
postgres = { version = "0.19.2", features = ["with-serde_json-1", "with-uuid-0_8", "with-chrono-0_4"] }
chrono = { version = "0.4.19", features = ["serde"] }
#terra-rust-api = {version= "1.0.10", git="https://github.com/PFC-Validator/terra-rust"}
#terra-rust-api = {version= "1.0.12", path="../../terra-rust/terra-rust-api"}
terra-rust-api="1.0.12"
secp256k1 = { version = "0.22.2", default-features = false }
async-trait = "0.1.51"
thread_local = "1.1.3"
sha2 = "0.8.0"
base64 = "0.13.0"

[dev-dependencies]
terra-rust-wallet = "1.0.3"
reqwest = { version = "0.11", features = ["json"], default-features = false }
